<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backmenu"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_baseline_backbutton"
                android:layout_gravity="end"
                app:tint="@color/black"
                android:onClick="ClickBack"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:onClick="ClickLogo"
        android:src="@drawable/logomain"
        tools:ignore="ContentDescription" />

            </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/converter_box"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#FFBA00"
        android:gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickBasic"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/basic_category"
            android:textColor="@color/black"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/basics"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickLiving"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/living_category"
            android:textColor="@color/black"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/living"
            tools:ignore="ContentDescription" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickScience"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/science_category"
            android:padding="12dp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/science"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickOther"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/other"
            tools:ignore="ContentDescription" />

    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:onClick="sharelink"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share_app"
                    android:padding="12dp"
                    android:layout_marginStart="16dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="16dp" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/share"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>