<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgeCalc"
    android:orientation="vertical"
    android:background="@drawable/gradient_animation"
    android:id="@+id/agecalc_layout">

    <LinearLayout
        android:id="@+id/stripes2"
        android:layout_width="1000dp"
        android:layout_height="1000dp"
        android:orientation="vertical"
        android:rotation="-45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_baseline_activitybackbutton"
                android:id="@+id/backbutton"
                app:tint="@color/black"
                tools:ignore="ContentDescription" />


        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_centerInParent="true"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="15dp"
            android:layout_gravity="center_horizontal"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="315dp"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:layout_gravity="center"
                        android:background="@drawable/input"
                        android:layout_marginTop="60dp"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:hint="@string/choose_dob_dd_mm_yyyy_and_time"
                        android:onClick="openDateTimePicker"
                        tools:ignore="Autofill,TextFields" />

                    <Button
                        android:id="@+id/findatebutton"
                        android:layout_width="250dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:onClick="findAge"
                        android:textColor="#000"
                        android:background="@drawable/buttonbg"
                        android:text="@string/find_age"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/textview"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:visibility="gone"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
