<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Currency"
    android:id="@+id/currency_layout"
    android:background="@drawable/gradient_animation"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/stripes12"
        android:layout_width="1000dp"
        android:layout_height="1000dp"
        android:orientation="vertical"
        android:rotation="-45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stripe_gradient" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_baseline_activitybackbutton"
                android:id="@+id/backbutton"
                app:tint="@color/black"
                tools:ignore="ContentDescription" />


        </LinearLayout>

        <TextView
            android:id="@+id/marquee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/keep_your_wifi_internet_on_for_the_currency_convertor"
            android:textSize="25sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textColor="@color/black"
            />

        <androidx.cardview.widget.CardView
            android:layout_centerInParent="true"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center_horizontal"
            >

            <LinearLayout
                android:id="@+id/ll_parent"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center"
                >

                <LinearLayout
                    android:id="@+id/ll_firstConversion"
                    android:layout_width="250dp"
                    android:layout_height="125dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/et_firstConversion"
                        android:layout_width="125dp"
                        android:layout_height="50dp"
                        android:textColor="@color/black"
                        android:autofillHints="null"
                        android:ems="5"
                        android:background="@drawable/input"
                        android:padding="10dp"
                        android:hint="@string/from"
                        android:inputType="numberDecimal"/>
                    <Spinner
                        android:layout_width="125dp"
                        android:layout_height="50dp"
                        android:id="@+id/spinner_firstConversion"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_secondConversion"
                    android:layout_width="250dp"
                    android:layout_height="125dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/et_secondConversion"
                        android:layout_width="125dp"
                        android:layout_height="50dp"
                        android:ems="5"
                        android:textSize="18sp"
                        android:hint="@string/to"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:background="@drawable/input"
                        android:padding="15dp"
                        android:autofillHints="null" />
                    <Spinner
                        android:layout_width="125dp"
                        android:layout_height="50dp"
                        android:id="@+id/spinner_secondConversion"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
